--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^0.9.0",
     "aws-sdk": "^2.1.14",
     "bluebird": "^2.9.13",
     "highland": "^2.4.0"
