--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "async": "^0.9.0",
     "aws-sdk": "^2.1.14",
     "bluebird": "^2.9.13",
-    "highland": "^2.4.0"
+    "clone": "^1.0.1",
+    "debug": "^2.1.3",
+    "gdal": "^0.4.1",
+    "highland": "^2.4.0",
+    "holdtime": "^0.1.1",
+    "s3-upload-stream": "^1.0.7",
+    "sphericalmercator": "^1.0.3",
+    "tmp": "0.0.25"
   }
 }
