--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "async": "^1.3.0",
     "aws-sdk": "^2.1.14",
     "bluebird": "^2.9.13",
-    "clone": "^1.0.1",
+    "clone": "^1.0.2",
     "debug": "^2.1.3",
     "gdal": "^0.5.0",
     "highland": "^2.4.0",
     "holdtime": "^0.1.1",
     "humanize-plus": "^1.5.0",
+    "lru-cache": "^2.6.5",
     "mkdirp": "^0.5.1",
     "range": "0.0.3",
     "s3-upload-stream": "^1.0.7",
